Make input box wider.

--- a/resource/plugin/shortener/css/shortener.css
+++ b/resource/plugin/shortener/css/shortener.css
@@ -22,3 +22,7 @@
 .original-key, .shortened-key, .current-key, .duration {
 	display: table-cell;
 }
+
+form#shorten input[type='text'] {
+	width: 100ex;
+}
